@@ -29,6 +29,7 @@ $ -> Language fix or change
 
 25-Oct-2009 Ian MacLennan
  # Fixed progress bar image
+ # Fixed media manager CSS image paths
 
 25-Oct-2009 Andrew Eddie
  # Fixed [#17088] Error on loading demodata during installation IE.
